--- a/src/components/colHomes/colHomes.module.scss
+++ b/src/components/colHomes/colHomes.module.scss
@@ -1,6 +1,35 @@
 @import "../../scss/main.scss";
 
 .homes {
-  background-color: $color-secondary;
   grid-column: $center-cols;
+  margin: 15rem 0;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 7rem;
+}
+
+.home {
+  background-color: $color-grey-light-1;
+
+  svg {
+
+  }
+
+  h5 {
+
+  }
+
+  .details {
+
+    svg {
+      fill: $color-primary;
+      height: 2rem;
+      width: 2rem;
+    }
+
+    p {
+
+    }
+  }
 }
