--- a/src/components/colStory/colStory.module.scss
+++ b/src/components/colStory/colStory.module.scss
@@ -4,10 +4,72 @@
   &__pictures {
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
+
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+
+    img {
+      // Remove gatsby-image height style
+      height: auto !important;
+
+      // Center align
+      top: 50% !important;
+      transform: translateY(-50%);
+    }
+
+    // Unhide overflow from gatsby-image
+    .image {
+      overflow: initial !important;
+    }
+
+    .image1 {
+      grid-row: 2 / 6;
+      grid-column: 2 /6;
+
+      img {
+        box-shadow: 0 2rem 5rem rgba(#000, .1);
+      }
+    }
+
+    .image2 {
+      width: calc(100% + 5vh);
+      grid-row: 4 / 6;
+      grid-column: 4 / 7;
+
+      img {
+        box-shadow: 0 2rem 5rem rgba(#000, .2);
+      }
+    }
   }
 
   &__content {
     background-color: $color-grey-light-1;
     grid-column: col-start 5 / full-end;
+    padding: 6rem 8vh;
+
+    display: grid;
+    align-content: center;
+    justify-items: start;
+
+    h2 {
+      @include heading-2(dark);
+      margin-bottom: 3rem;
+    }
+
+    h3 {
+      @include heading-3;
+      margin-bottom: 2rem;
+    }
+
+    button {
+      @include btn;
+    }
+
+    p {
+      font-size: 1.5rem;
+      font-style: italic;
+      margin-bottom: 4rem;
+    }
   }
 }
