--- a/src/components/colFeatures/colFeatures.module.scss
+++ b/src/components/colFeatures/colFeatures.module.scss
@@ -13,7 +13,7 @@
 .feature {
   display: grid;
   grid-template-columns: min-content 1fr;
-  row-gap:  1.5rem;
+  row-gap: 1.5rem;
   column-gap: 2.5rem;
 
   h4 {
@@ -21,9 +21,8 @@
   }
 
   svg {
+    @include icon-size(4.5rem);
     fill: $color-primary;
-    width: 4.5rem;
-    height: 4.5rem;
     grid-row: 1 / span 2;
     transform: translateY(-1rem);
   }
