--- a/src/components/colFooter/colFooter.module.scss
+++ b/src/components/colFooter/colFooter.module.scss
@@ -3,4 +3,52 @@
 .footer {
   background-color: $color-secondary;
   grid-column: $full-cols;
+  padding: 8rem;
+
+  nav {
+  }
+
+  ul {
+    list-style: none;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    gap: 2rem;
+    align-items: center;
+  }
+
+  li {
+  }
+
+  button {
+    border: 0;
+    cursor: pointer;
+
+    font-size: 1.4rem;
+    color: #fff;
+    text-decoration: none;
+    font-family: $font-display;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 1.5rem;
+    display: block;
+    width: 100%;
+
+    background-color: transparent;
+    transition: all 0.2s;
+
+    &:hover,
+    &:active {
+      background-color: rgba(#fff, 0.05);
+      transform: translateY(-3px);
+    }
+  }
+
+  p {
+    font-size: 1.4rem;
+    color: $color-grey-light-2;
+    text-align: center;
+    width: 70%;
+    margin: 6rem auto 0;
+  }
 }
