--- a/src/components/colHeader/colHeader.module.scss
+++ b/src/components/colHeader/colHeader.module.scss
@@ -3,4 +3,78 @@
 .header {
   background-color: $color-grey-dark-1;
   grid-column: full-start / col-end 6;
+  padding: 4rem 8rem 8rem;
+
+  display: grid;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+  grid-template-columns: minmax(min-content, max-content);
+  row-gap: 1.5rem;
+  justify-content: center;
+
+  h3 {
+    @include heading-3;
+  }
+
+  h1 {
+    @include heading-1;
+  }
+
+  button {
+    @include btn;
+    align-self: start;
+    justify-self: start;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: full-start / full-end;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 5rem;
+  }
+}
+
+.logo {
+  justify-self: center;
+}
+
+.asSeenOn {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 3rem;
+  justify-items: center;
+
+  &__text {
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    column-gap: 1.5rem;
+    align-items: center;
+
+    font-size: 1.6rem;
+    color: $color-grey-light-2;
+
+    &::before,
+    &::after {
+      content: "";
+      height: 1px;
+      display: block;
+      background-color: currentColor;
+    }
+
+    &::before {
+    }
+
+    &::after {
+    }
+  }
+
+  &__image {
+    filter: brightness(70%);
+    width: 100% !important;
+
+    // Stop image overflowing gatsby container
+    img {
+      object-fit: contain !important;
+    }
+  }
 }
