--- a/src/components/colRealtors/colRealtors.module.scss
+++ b/src/components/colRealtors/colRealtors.module.scss
@@ -3,4 +3,52 @@
 .realtors {
   background-color: $color-secondary;
   grid-column: col-start 7 / full-end;
+  padding: 3rem;
+
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+  row-gap: 2rem;
+
+  h3 {
+    @include heading-3;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: full-start / full-end;
+  }
+}
+
+.realtorsList {
+  display: grid;
+  grid-template-columns: min-content max-content;
+  column-gap: 2rem;
+  row-gap: 5vh;
+  align-items: center;
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-template-columns: repeat(3, min-content max-content);
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    grid-template-columns: min-content max-content;
+  }
+}
+
+.realtorsImage {
+  width: 7rem;
+  border-radius: 50%;
+}
+
+.realtorsDetails {
+  h4 {
+    @include heading-4(light);
+  }
+
+  p {
+    text-transform: uppercase;
+    color: $color-grey-light-2;
+    margin-top: -3px;
+  }
 }
