--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -27,3 +27,7 @@ $bp-largest: 75em; // 1200px
 $bp-large: 62.5em; // 1000px
 $bp-medium: 50em; // 800px
 $bp-small: 37.5em; // 600px
+
+// Z-INDECIES
+$z-image-icon: 2;
+$z-image-title: 2;
