--- a/src/components/colStory/colStory.module.scss
+++ b/src/components/colStory/colStory.module.scss
@@ -2,12 +2,18 @@
 
 .story {
   &__pictures {
+    grid-column: $full-cols;
     background-color: $color-primary;
-    grid-column: full-start / col-end 4;
+    padding: 6rem;
 
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
+
+    @include media-breakpoint-up($bp-medium) {
+      grid-column: full-start / col-end 4;
+      padding: 0;
+    }
 
     img {
       // Remove gatsby-image height style
@@ -24,48 +30,49 @@
     }
 
     .image1 {
-      grid-row: 2 / 6;
-      grid-column: 2 /6;
+      grid-column: 1 / 5;
+      grid-row: $full-cols;
+
+      @include media-breakpoint-up($bp-medium) {
+        grid-row: 2 / 6;
+        grid-column: 2 /6;
+      }
 
       img {
         box-shadow: 0 2rem 5rem rgba(#000, 0.1);
       }
-
-      @media only screen and (max-width: $bp-medium) {
-        grid-column: 1 / 5;
-        grid-row: full-start / full-end;
-      }
     }
 
     .image2 {
-      width: calc(100% + 4vh);
-      grid-row: 4 / 6;
+      width: 100%;
+      grid-row: $full-cols;
       grid-column: 4 / 7;
+
+      @include media-breakpoint-up($bp-medium) {
+        width: calc(100% + 4vh);
+        grid-row: 4 / 6;
+      }
 
       img {
         box-shadow: 0 2rem 5rem rgba(#000, 0.2);
       }
-
-      @media only screen and (max-width: $bp-medium) {
-        width: 100%;
-        grid-row: full-start / full-end;
-      }
-    }
-
-    @media only screen and (max-width: $bp-medium) {
-      grid-column: full-start / full-end;
-      padding: 6rem;
     }
   }
 
   &__content {
+    grid-column: $full-cols;
+    grid-row: 5 / 6;
     background-color: $color-grey-light-1;
-    grid-column: col-start 5 / full-end;
     padding: 6rem 8vh;
 
     display: grid;
     align-content: center;
     justify-items: start;
+
+    @include media-breakpoint-up($bp-medium) {
+      grid-column: col-start 5 / full-end;
+      grid-row: initial;
+    }
 
     h2 {
       @include heading-2(dark);
@@ -85,11 +92,6 @@
       font-size: 1.5rem;
       font-style: italic;
       margin-bottom: 4rem;
-    }
-
-    @media only screen and (max-width: $bp-medium) {
-      grid-column: full-start / full-end;
-      grid-row: 5 / 6;
     }
   }
 }
