--- a/src/containers/MainContainer/MainContainer.module.scss
+++ b/src/containers/MainContainer/MainContainer.module.scss
@@ -2,27 +2,27 @@
 
 .MainContainer {
   display: grid;
-  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-rows: 6rem calc(100vh - 6rem);
   grid-template-columns:
-    [sidebar-start] 8rem [sidebar-end
-    full-start] $margin-col-width
+    [full-start] $margin-col-width
     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [center-end]
     $margin-col-width [full-end];
 
-  @media only screen and (max-width: $bp-large) {
+  @include media-breakpoint-up($bp-medium) {
     grid-template-rows: 6rem 80vh min-content minmax(min-content, 40vw) repeat(
         3,
         min-content
       );
+  }
+
+  @include media-breakpoint-up($bp-large) {
+    grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
     grid-template-columns:
-      [full-start] $margin-col-width
+      [sidebar-start] 8rem [sidebar-end
+      full-start] $margin-col-width
       [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
       [center-end]
       $margin-col-width [full-end];
-  }
-
-  @media only screen and (max-width: $bp-medium) {
-    grid-template-rows: 6rem calc(100vh - 6rem);
   }
 }
