--- a/src/components/colRealtors/colRealtors.module.scss
+++ b/src/components/colRealtors/colRealtors.module.scss
@@ -3,7 +3,7 @@
 .realtors {
   grid-column: $full-cols;
   background-color: $color-secondary;
-  padding: 3rem;
+  padding: 6rem 3rem;
 
   display: grid;
   align-content: center;
