--- a/src/components/colGallery/colGallery.module.scss
+++ b/src/components/colGallery/colGallery.module.scss
@@ -8,16 +8,16 @@
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(7, 20vw);
   gap: 1.5rem;
-  padding: 1.5rem;
+  padding: 6rem;
 
-  @include media-breakpoint-up($bp-medium) {
+  @include media-breakpoint-up($bp-large) {
     grid-template-rows: repeat(7, 5vw);
   }
 }
 
 .galleryImage {
   grid-column: auto / span 4;
-  @include media-breakpoint-up($bp-medium) {
+  @include media-breakpoint-up($bp-large) {
     &:nth-child(1) {
       grid-row: 1 / span 2;
       grid-column: 1 / span 2;
