--- a/src/components/colHomes/colHomes.module.scss
+++ b/src/components/colHomes/colHomes.module.scss
@@ -2,11 +2,15 @@
 
 .homes {
   grid-column: $center-cols;
-  margin: 15rem 0;
+  margin: 6rem 0;
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap: 7rem;
+
+  @include media-breakpoint-up($bp-medium) {
+    margin: 15rem 0;
+  }
 }
 
 .home {
