--- a/src/components/colSidebar/colSidebar.module.scss
+++ b/src/components/colSidebar/colSidebar.module.scss
@@ -9,7 +9,15 @@
   grid-row: 1 / 2;
   align-items: center;
 
-  @include media-breakpoint-up($bp-large) {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: $navbar-height;
+  z-index: $z-navbar;
+
+  @include media-breakpoint-up($bp-navbar) {
+    position: relative;
+    height: auto;
     justify-content: center;
     grid-column: $sidebar-cols;
     grid-row: 1 / -1;
@@ -44,7 +52,8 @@
       transform: translateY(1rem);
     }
 
-    @include media-breakpoint-up($bp-large) {
+    @include media-breakpoint-up($bp-navbar) {
+      position: fixed;
       margin-right: 0;
       margin-top: 4rem;
 
