--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -23,4 +23,10 @@ body {
   color: $color-grey-dark-2;
   font-weight: 300;
   line-height: 1.6;
+
+  margin-top: $navbar-height;
+
+  @include media-breakpoint-up($bp-navbar) {
+    margin-top: 0;
+  }
 }
