Added scrolling links

--- a/src/components/colHeader/colHeader.module.scss
+++ b/src/components/colHeader/colHeader.module.scss
@@ -27,8 +27,9 @@
     @include heading-1;
   }
 
-  button {
+  a {
     @include btn;
+    text-decoration: none;
     align-self: start;
     justify-self: start;
   }
