--- a/src/components/colHomes/colHomes.module.scss
+++ b/src/components/colHomes/colHomes.module.scss
@@ -2,14 +2,14 @@
 
 .homes {
   grid-column: $center-cols;
-  margin: 6rem 0;
+  padding: 6rem 0;
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap: 7rem;
 
   @include media-breakpoint-up($bp-medium) {
-    margin: 15rem 0;
+    padding: 15rem 0;
   }
 }
 
