Fixed button hover colours

--- a/src/components/colHomes/colHomes.module.scss
+++ b/src/components/colHomes/colHomes.module.scss
@@ -67,6 +67,10 @@
   &Selected {
     color: $color-primary;
     animation: swellshrink .35s ease-in-out;
+
+    &:hover {
+      color: #fff;
+    }
   }
 
   svg {
