--- a/src/components/colHomes/colHomes.module.scss
+++ b/src/components/colHomes/colHomes.module.scss
@@ -109,3 +109,115 @@
   @include btn;
   grid-column: 1 / -1;
 }
+
+// ==================================================
+
+// MODAL
+.modal {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  gap: 2rem;
+
+  width: calc(100vw - 4rem);
+  background-color: #fff;
+  max-width: 40rem;
+
+  @include media-breakpoint-up($bp-small) {
+    max-width: 50rem;
+  }
+
+  @include media-breakpoint-up($bp-medium) {
+    max-width: 70rem;
+  }
+
+  @include media-breakpoint-up($bp-large) {
+    max-width: 90rem;
+  }
+
+  h5 {
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    z-index: $z-modal;
+    justify-self: center;
+    align-self: flex-end;
+    width: 80%;
+    font-family: $font-display;
+    font-size: 2rem;
+    text-align: center;
+    padding: 1.25rem;
+    background-color: $color-secondary;
+    color: #fff;
+    font-weight: 400;
+    transform: translateY(50%);
+
+    @include media-breakpoint-up($bp-small) {
+      grid-column: 2 / -2;
+      width: 100%;
+    }
+  }
+
+  button {
+    @include btn;
+    grid-column: 1 / -1;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+
+    @include media-breakpoint-up($bp-medium) {
+      width: 100%;
+    }
+
+    &.modalButtonEmail {
+      @include media-breakpoint-up($bp-medium) {
+        grid-column: 2 / span 3;
+        margin-bottom: 3rem;
+      }
+
+      @include media-breakpoint-up($bp-large) {
+        margin-top: 2.5rem;
+        margin-bottom: 0;
+        grid-column: 5 / span 3;
+        align-self: flex-end;
+      }
+    }
+
+    &.modalButtonCall {
+      margin-bottom: 3rem;
+
+      @include media-breakpoint-up($bp-medium) {
+        grid-column: 5 / span 3;
+      }
+    }
+  }
+}
+
+.modalImage {
+  grid-row: 1 / 2;
+  grid-column: 1 / -1;
+}
+
+.modalRealtorInfo {
+  grid-column: 2 / -2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2.5rem;
+
+  @include media-breakpoint-up($bp-large) {
+    grid-column: 2 / span 3;
+    grid-row: span 2;
+    margin-top: 0;
+  }
+
+  p {
+    font-family: $font-display;
+    font-size: 1.7rem;
+    font-weight: 400;
+  }
+}
+
+.modalRealtorImage {
+  margin-right: 2rem;
+  border-radius: 50%;
+  width: 12rem;
+}
