Fixed house modal image height

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -35,6 +35,7 @@ $bp-navbar: $bp-large; // Breakpoint for navbar moving from top to side
 
 // ELEMENT HEIGHTS
 $navbar-height: 6rem;
+$modal-gutter: 3rem;
 
 // Z-INDECIES
 $z-image-icon: 2;
