--- a/src/components/colHomes/colHomes.module.scss
+++ b/src/components/colHomes/colHomes.module.scss
@@ -118,9 +118,10 @@
   grid-template-columns: repeat(8, 1fr);
   gap: 2rem;
 
-  width: calc(100vw - 4rem);
+  width: calc(100vw - #{$modal-gutter *2});
   background-color: #fff;
   max-width: 40rem;
+  padding-bottom: 2.5rem;
 
   @include media-breakpoint-up($bp-small) {
     max-width: 50rem;
@@ -170,20 +171,16 @@
     &.modalButtonEmail {
       @include media-breakpoint-up($bp-medium) {
         grid-column: 2 / span 3;
-        margin-bottom: 3rem;
       }
 
       @include media-breakpoint-up($bp-large) {
         margin-top: 2.5rem;
-        margin-bottom: 0;
         grid-column: 5 / span 3;
         align-self: flex-end;
       }
     }
 
     &.modalButtonCall {
-      margin-bottom: 3rem;
-
       @include media-breakpoint-up($bp-medium) {
         grid-column: 5 / span 3;
       }
@@ -194,6 +191,7 @@
 .modalImage {
   grid-row: 1 / 2;
   grid-column: 1 / -1;
+  max-height: 50vh;
 }
 
 .modalRealtorInfo {
