--- a/src/containers/Lightbox/Lightbox.module.scss
+++ b/src/containers/Lightbox/Lightbox.module.scss
@@ -1,6 +1,6 @@
-@import "../../scss/main.scss";
+@import '../../scss/main.scss';
 
-.gallery {
+.Gallery {
   background-color: $color-grey-light-1;
   grid-column: $full-cols;
 
@@ -15,7 +15,7 @@
   }
 }
 
-.galleryImage {
+.GalleryLink {
   grid-column: auto / span 4;
   @include media-breakpoint-up($bp-large) {
     &:nth-child(1) {
@@ -77,10 +77,11 @@
   }
 }
 
+.GalleryImage {
+  width: 100%;
+  height: 100%;
+}
 
-// ==================================================
-
-// MODAL
 .modal {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
