--- a/src/components/colHeader/colHeader.module.scss
+++ b/src/components/colHeader/colHeader.module.scss
@@ -73,3 +73,56 @@
     }
   }
 }
+
+.scrollDown {
+  position: relative;
+  width: 2.4rem;
+  height: 2.4rem;
+  justify-self: center;
+  margin-bottom: 2.4rem;
+
+  @include media-breakpoint-up($bp-medium) {
+    display: none;
+  }
+
+  span {
+    @include sr-only;
+  }
+}
+
+.scrollDownIcon {
+  position: absolute;
+  width: 28px;
+  height: 8px;
+  opacity: 0;
+  transform: scale3d(0.5, 0.5, 0.5);
+  animation: scrolldown 3s ease-out infinite;
+
+  &:first-child {
+    animation: scrolldown 3s ease-out 1s infinite;
+  }
+
+  &:nth-child(2) {
+    animation: scrolldown 3s ease-out 2s infinite;
+  }
+
+  &::before, &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 51%;
+    background: #fff;
+  }
+
+  &::before {
+    left: 0;
+    transform: skew(0deg, 30deg);
+  }
+
+  &::after {
+    right: 0;
+    width: 50%;
+    transform: skew(0deg, -30deg);
+  }
+}
