--- a/src/scss/_transitions.scss
+++ b/src/scss/_transitions.scss
@@ -21,3 +21,22 @@
     transform: scale(1);
   }
 }
+
+@keyframes scrolldown {
+  25% {
+    opacity: 1;
+
+  }
+  33% {
+    opacity: 1;
+    transform: translateY(30px);
+  }
+  67% {
+    opacity: 1;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+  }
+}
