--- a/src/components/colFeatures/colFeatures.module.scss
+++ b/src/components/colFeatures/colFeatures.module.scss
@@ -2,7 +2,7 @@
 
 .features {
   grid-column: $center-cols;
-  margin: 6rem 0;
+  padding: 6rem 0;
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
@@ -10,7 +10,7 @@
   align-items: start;
 
   @include media-breakpoint-up($bp-medium) {
-    margin: 15rem 0;
+    padding: 15rem 0;
   }
 }
 
