--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 // COLOR VARIABLES
 $color-primary: #c69963;
 $color-primary-dark: #b28451;
+$color-primary-light: #ebdac7;
 
 $color-secondary: #101d2c;
 
