--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -30,3 +30,38 @@ body {
     margin-top: 0;
   }
 }
+
+// $transition-collapse:         height .35s ease !default;
+// $enable-transitions:                          true;
+// $enable-prefers-reduced-motion-media-query:   true;
+
+// @mixin transition($transition...) {
+//   @if $enable-transitions {
+//     @if length($transition) == 0 {
+//       transition: $transition-base;
+//     } @else {
+//       transition: $transition;
+//     }
+//   }
+
+//   @if $enable-prefers-reduced-motion-media-query {
+//     @media (prefers-reduced-motion: reduce) {
+//       transition: none;
+//     }
+//   }
+// }
+
+// .collapse {
+//   &:not(.show) {
+//     display: none;
+//   }
+// }
+
+// .collapsing {
+//   position: relative;
+//   height: 0;
+//   overflow: hidden;
+//   @include transition($transition-collapse);
+// }
+
+
