Layout now contains nav & footer, 404 page built

--- a/src/components/colFooter/colFooter.module.scss
+++ b/src/components/colFooter/colFooter.module.scss
@@ -1,8 +1,10 @@
 @import "../../scss/main.scss";
 
 .footer {
+  grid-row: $footer-row;
+  grid-column: $content-cols;
+
   background-color: $color-secondary;
-  grid-column: $full-cols;
   padding: 6rem;
 
   ul {
