--- a/src/containers/MainContainer/MainContainer.module.scss
+++ b/src/containers/MainContainer/MainContainer.module.scss
@@ -1,28 +1,50 @@
 @import "../../scss/main.scss";
 
+// .MainContainer {
+//   display: grid;
+//   grid-template-rows: calc(100vh - 6rem);
+//   grid-template-columns:
+//     [full-start] $margin-col-width
+//     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+//     [center-end]
+//     $margin-col-width [full-end];
+
+//   @include media-breakpoint-up($bp-medium) {
+//     grid-template-rows: 80vh min-content minmax(min-content, 40vw) repeat(
+//         3,
+//         min-content
+//       );
+//   }
+
+//   @include media-breakpoint-up($bp-large) {
+//     grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+//     grid-template-columns:
+//       [sidebar-start] 8rem [sidebar-end
+//       full-start] $margin-col-width
+//       [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+//       [center-end]
+//       $margin-col-width [full-end];
+//   }
+// }
+
 .MainContainer {
   display: grid;
-  grid-template-rows: calc(100vh - 6rem);
-  grid-template-columns:
-    [full-start] $margin-col-width
-    [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
-    [center-end]
-    $margin-col-width [full-end];
+  grid-template-rows:
+    [content-row-start] 1fr [content-row-end
+    footer-row-start] auto [footer-row-end];
+  grid-template-columns: [content-start] 1fr [content-end];
+  min-height: 100%;
 
-  @include media-breakpoint-up($bp-medium) {
-    grid-template-rows: 80vh min-content minmax(min-content, 40vw) repeat(
-        3,
-        min-content
-      );
-  }
-
-  @include media-breakpoint-up($bp-large) {
-    grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  @include media-breakpoint-up($bp-navbar) {
     grid-template-columns:
       [sidebar-start] 8rem [sidebar-end
-      full-start] $margin-col-width
-      [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
-      [center-end]
-      $margin-col-width [full-end];
+      content-start] 1fr [content-end];
+  }
+
+  main {
+    grid-row: $content-row;
+    grid-column: $content-cols;
+
+    display: grid;
   }
 }
