--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -11,11 +11,16 @@
   font-weight: 400;
 }
 
-@mixin heading-1 {
+@mixin heading-1($lightness) {
   @include heading;
   font-size: 4.5rem;
-  color: $color-grey-light-1;
   line-height: 1;
+
+  @if ($lightness == light) {
+    color: $color-grey-light-1;
+  } @else if ($lightness == dark) {
+    color: $color-grey-dark-1;
+  }
 }
 
 @mixin heading-2($lightness) {
