--- a/src/components/colFooter/colFooter.module.scss
+++ b/src/components/colFooter/colFooter.module.scss
@@ -7,6 +7,12 @@
   background-color: $color-secondary;
   padding: 6rem;
 
+  nav {
+    &:not(:last-child) {
+      margin-bottom: 6rem;
+    }
+  }
+
   ul {
     list-style: none;
 
@@ -16,15 +22,14 @@
     align-items: center;
   }
 
-  button {
-    border: 0;
-    cursor: pointer;
-
+  & a,
+  & button {
     font-size: 1.4rem;
     color: #fff;
     text-decoration: none;
     font-family: $font-display;
     text-transform: uppercase;
+    font-weight: 400;
     text-align: center;
     padding: 1.5rem;
     display: block;
@@ -40,11 +45,21 @@
     }
   }
 
+  button {
+    @include btn-reset;
+  }
+
   p {
     font-size: 1.4rem;
     color: $color-grey-light-2;
     text-align: center;
     width: 70%;
-    margin: 6rem auto 0;
+    margin: 0 auto 3rem;
   }
+}
+
+.personalLinks {
+  max-width: 60rem;
+  margin-left: auto;
+  margin-right: auto;
 }
